initial work on page template
git-svn-id: http://www.ontocat.org/svn/trunk@54 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT-webpage/WebContent/index.html
+++ b/ontoCAT-webpage/WebContent/index.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Insert title here</title>
+<meta
+	http-equiv="content-type"
+	content="text/html; charset=utf-8"
+/>
+<meta
+	name="description"
+	content="OntoCAT is an open source application providing a set of common API tasks to query existing 
+	ontology resources (Bioportal, OLS) using a standardised, uniform interface."
+/>
+<meta
+	name="keywords"
+	content="Open Source, Ontology, Bioportal, OWL, OBO, OLS, Software, Development, Developers, Projects, Downloads, Bio-Informatics, Advanced End Users, GNU General Public License version 3.0 (GPLv3), Java, OS Independent (Written in an interpreted language), ontoCAT, ontocat"
+/>
+<title>ontoCAT - Ontology Common API Tasks</title>
+<link
+	rel="stylesheet"
+	type="text/css"
+	href="rsc/css/main.css"
+/>
 </head>
 <body>
-
+<!-- Common header -->
+<img
+	src="rsc/images/ontocat.png"
+	height="154px"
+></img>
+<span class="pageHeader">Ontology <span class="logoGreen">Common
+API Tasks</span></span>
+<table style="position: relative; top: 50px;">
+	<tr>
+		<!-- Navigation pane -->
+		<td width="200px">
+		<ul class="navigationPane">
+			<li class="currentPage"><a href="index.html">Home</a></li>
+			<li><a href="http://sourceforge.net/projects/ontocat/files">Download</a></li>
+			<li><a href="docs.html">Documentation</a></li>
+			<li><a href="https://sourceforge.net/projects/ontocat">Project
+			details</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+		</td>
+		<!-- Main content -->
+		<td valign="top">
+		<h1>About</h1>
+		<p>An open source common API tasks to query existing ontology
+		resources (Bioportal, OLS) using a standardised, uniform interface.</p>
+		</td>
+	</tr>
+</table>
+<!-- SourceForge logo -->
+<div class="footer"><a
+	href="http://sourceforge.net/projects/ontocat"
+><img
+	src="http://sflogo.sourceforge.net/sflogo.php?group_id=281068&amp;type=10"
+	width="80"
+	height="15"
+	alt="Get ontoCAT at SourceForge.net. Fast, secure and Free Open Source software downloads"
+/></a></div>
+<!-- Google Analytics tracking code -->
+<script type="text/javascript">
+	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl."
+			: "http://www.");
+	document
+			.write(unescape("%3Cscript src='"
+					+ gaJsHost
+					+ "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+	try {
+		var pageTracker = _gat._getTracker("UA-12921570-1");
+		pageTracker._trackPageview();
+	} catch (err) {
+	}
+</script>
 </body>
 </html>
