ongoing work, adding favicon
git-svn-id: http://www.ontocat.org/svn/trunk@58 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT-webpage/WebContent/examples.html
+++ b/ontoCAT-webpage/WebContent/examples.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head profile="http://www.w3.org/2005/10/profile">
+<head>
 <meta
 	http-equiv="content-type"
 	content="text/html; charset=utf-8"
@@ -19,10 +19,6 @@
 	rel="stylesheet"
 	type="text/css"
 	href="rsc/css/main.css"
-/>
-<link
-	rel="SHORTCUT ICON"
-	href="rsc/images/favicon.ico"
 />
 </head>
 <body>
@@ -45,7 +41,7 @@ API Tasks</span></span>
 	<tr>
 		<td height="20px">&nbsp;</td>
 	</tr>
-	<tr class="menuCell currentPage">
+	<tr class="menuCell">
 		<td width="165px"><a href="index.html">Home</a></td>
 	</tr>
 	<tr class="menuCell">
@@ -57,7 +53,7 @@ API Tasks</span></span>
 			href="doc/index.html"
 		>Documentation</a></td>
 	</tr>
-		<tr class="menuCell">
+	<tr class="menuCell currentPage">
 		<td><a
 			target="_blank"
 			href="examples.html"
@@ -78,26 +74,8 @@ API Tasks</span></span>
 </table>
 <!-- Main content -->
 <div class="mainContent">
-<h1>About</h1>
-<p><strong>Onto CAT</strong> or <strong>Ontology Common API Tasks</strong> is a
-java library aiming to simplify the hurdle of querying many existing ontology
-resources. In its most current version it supports not only both the main ontology browsers: <a
-	href="http://bioportal.bioontology.org"
-	target="_blank"
->NCBO BioPortal</a> and <a
-	href="http://www.ebi.ac.uk/ontology-lookup/"
-	target="_blank"
->EBI Ontology Lookup Service (OLS)</a>, providing a convenient wrapper
-around their original Web Services, but also supports querying local OWL
-and OBO resources employing the <a
-	href="http://owlapi.sourceforge.net/2.x.x/index.html"
-> OWL API</a>. <strong>Onto CAT</strong> provides the same standardised, uniform interface for all of them.</p>
-<p><strong>Onto CAT</strong> is open source and is available under the <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html"
-target="_blank">GPLv3 license</a>.</p>
-<p>Releases are often and comprehensively tested, so the end user does not have to worry about the updates in 
-access to underlying resources.</p>
-<h1>News</h1>
-<p>We have new web page.</p>
+<h1>Examples</h1>
+<p>Coming shortly</p>
 </div>
 <!-- SourceForge logo -->
 <div class="footer">
