--- a/ontoCAT-webpage/WebContent/contact.html
+++ b/ontoCAT-webpage/WebContent/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head profile="http://www.w3.org/2005/10/profile">
+<head>
 <meta
 	http-equiv="content-type"
 	content="text/html; charset=utf-8"
@@ -19,10 +19,6 @@
 	rel="stylesheet"
 	type="text/css"
 	href="rsc/css/main.css"
-/>
-<link
-	rel="SHORTCUT ICON"
-	href="rsc/images/favicon.ico"
 />
 </head>
 <body>
@@ -45,7 +41,7 @@ API Tasks</span></span>
 	<tr>
 		<td height="20px">&nbsp;</td>
 	</tr>
-	<tr class="menuCell currentPage">
+	<tr class="menuCell">
 		<td width="165px"><a href="index.html">Home</a></td>
 	</tr>
 	<tr class="menuCell">
@@ -57,7 +53,7 @@ API Tasks</span></span>
 			href="doc/index.html"
 		>Documentation</a></td>
 	</tr>
-		<tr class="menuCell">
+	<tr class="menuCell">
 		<td><a
 			target="_blank"
 			href="examples.html"
@@ -69,7 +65,7 @@ API Tasks</span></span>
 			href="https://sourceforge.net/projects/ontocat"
 		>Project details</a></td>
 	</tr>
-	<tr class="menuCell">
+	<tr class="menuCell currentPage">
 		<td><a href="contact.html">Contact</a></td>
 	</tr>
 	<tr>
@@ -78,26 +74,23 @@ API Tasks</span></span>
 </table>
 <!-- Main content -->
 <div class="mainContent">
-<h1>About</h1>
-<p><strong>Onto CAT</strong> or <strong>Ontology Common API Tasks</strong> is a
-java library aiming to simplify the hurdle of querying many existing ontology
-resources. In its most current version it supports not only both the main ontology browsers: <a
-	href="http://bioportal.bioontology.org"
+<h1>Mailing lists</h1>
+<h2>[ontoCAT-users]</h2>
+<p>A general list for users of Onto CAT. Ask all your questions
+here.</p>
+<p><a
+	href="https://lists.sourceforge.net/lists/listinfo/ontocat-users"
 	target="_blank"
->NCBO BioPortal</a> and <a
-	href="http://www.ebi.ac.uk/ontology-lookup/"
+>Click to subscribe. </a></p>
+<h2>[ontoCAT-svn]</h2>
+<p>Mailing list aimed mainly at active developers of the project,
+but feel free to subscribe.</p>
+<p><a
+	href="https://lists.sourceforge.net/lists/listinfo/ontocat-svn"
 	target="_blank"
->EBI Ontology Lookup Service (OLS)</a>, providing a convenient wrapper
-around their original Web Services, but also supports querying local OWL
-and OBO resources employing the <a
-	href="http://owlapi.sourceforge.net/2.x.x/index.html"
-> OWL API</a>. <strong>Onto CAT</strong> provides the same standardised, uniform interface for all of them.</p>
-<p><strong>Onto CAT</strong> is open source and is available under the <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html"
-target="_blank">GPLv3 license</a>.</p>
-<p>Releases are often and comprehensively tested, so the end user does not have to worry about the updates in 
-access to underlying resources.</p>
-<h1>News</h1>
-<p>We have new web page.</p>
+>Click to subscribe.</a></p>
+<h1>Feature requests and bug tracker</h1>
+<p>We've got <a href="https://sourceforge.net/tracker/?group_id=281068&atid=1192566" target="_blank">one</a> as well.</p>
 </div>
 <!-- SourceForge logo -->
 <div class="footer">
