draft version of the sf website
git-svn-id: http://www.ontocat.org/svn/trunk@71 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT-webpage/WebContent/contact.html
+++ b/ontoCAT-webpage/WebContent/contact.html
@@ -20,6 +20,10 @@
 	type="text/css"
 	href="rsc/css/main.css"
 />
+<link
+	rel="shortcut icon"
+	href="http://ontocat.sourceforge.net/rsc/images/favicon.ico"
+>
 </head>
 <body>
 <!-- Common header -->
@@ -54,10 +58,7 @@ API Tasks</span></span>
 		>Documentation</a></td>
 	</tr>
 	<tr class="menuCell">
-		<td><a
-			target="_blank"
-			href="examples.html"
-		>Examples</a></td>
+		<td><a href="examples.html">Examples</a></td>
 	</tr>
 	<tr class="menuCell">
 		<td><a
@@ -90,7 +91,10 @@ but feel free to subscribe.</p>
 	target="_blank"
 >Click to subscribe.</a></p>
 <h1>Feature requests and bug tracker</h1>
-<p>We've got <a href="https://sourceforge.net/tracker/?group_id=281068&atid=1192566" target="_blank">one</a> as well.</p>
+<p>We've got <a
+	href="https://sourceforge.net/tracker/?group_id=281068&atid=1192566"
+	target="_blank"
+>one</a> as well.</p>
 </div>
 <!-- SourceForge logo -->
 <div class="footer">
