--- a/ontoCAT-webpage/WebContent/downloads.html
+++ b/ontoCAT-webpage/WebContent/downloads.html
@@ -20,6 +20,10 @@
 	type="text/css"
 	href="rsc/css/main.css"
 />
+<link
+	rel="shortcut icon"
+	href="http://ontocat.sourceforge.net/rsc/images/favicon.ico"
+>
 </head>
 <body>
 <!-- Common header -->
@@ -50,14 +54,11 @@ API Tasks</span></span>
 	<tr class="menuCell">
 		<td><a
 			target="_blank"
-			href="index.html"
+			href="doc/index.html"
 		>Documentation</a></td>
 	</tr>
 	<tr class="menuCell">
-		<td><a
-			target="_blank"
-			href="examples.html"
-		>Examples</a></td>
+		<td><a href="examples.html">Examples</a></td>
 	</tr>
 	<tr class="menuCell">
 		<td><a
@@ -75,11 +76,20 @@ API Tasks</span></span>
 <!-- Main content -->
 <div class="mainContent">
 <h1>Latest stable release</h1>
-<p>Get it here.</p>
-<h1>Development version</h1>
+<p><a
+	href="https://sourceforge.net/projects/ontocat/files/ontoCAT/version_0.8/ontoCAT_v0.8.jar/download"
+	target="_blank"
+>Version 0.8</a></p>
+<p><a
+	href="http://master.dl.sourceforge.net/project/ontocat/ontoCAT/version_0.8/release_notes.txt"
+	target="_blank"
+>Release notes</a></p>
+<h1>Older veresions</h1>
+<p></p>
+<h1>Dev version</h1>
 <p>You can check it out from SVN</p>
-<p>svn co https://ontocat.svn.sourceforge.net/svnroot/ontocat/trunk/ontoCAT</p>
-</div>
+<pre>svn co
+https://ontocat.svn.sourceforge.net/svnroot/ontocat/trunk/ontoCAT</pre></div>
 <!-- SourceForge logo -->
 <div class="footer">
 <div
