--- a/ontoCAT-webpage/WebContent/examples.html
+++ b/ontoCAT-webpage/WebContent/examples.html
@@ -20,6 +20,10 @@
 	type="text/css"
 	href="rsc/css/main.css"
 />
+<link
+	rel="shortcut icon"
+	href="http://ontocat.sourceforge.net/rsc/images/favicon.ico"
+>
 </head>
 <body>
 <!-- Common header -->
@@ -74,8 +78,24 @@ API Tasks</span></span>
 </table>
 <!-- Main content -->
 <div class="mainContent">
-<h1>Examples</h1>
-<p>Coming shortly</p>
+<h1>Code examples</h1>
+<h2><a
+	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontoapi/examples/Example1.java?view=markup"
+	target="_blank"
+>Example 1</a> - Shows how to list all ontologies available through OLS</h2>
+<h2><a
+	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontoapi/examples/Example2.java?view=markup"
+	target="_blank"
+>Example 2</a> - Shows how to list all ontologies available through NCBO
+BioPortal</h2>
+<h2><a
+	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontoapi/examples/Example3.java?view=markup"
+	target="_blank"
+>Example 3</a> - Shows how to search an OWL ontology</h2>
+<p>Not found an example you're interested in? Feel free to request
+it via the <a
+	href="https://sourceforge.net/tracker/?group_id=281068&atid=1192566"
+> tracker</a>.</p>
 </div>
 <!-- SourceForge logo -->
 <div class="footer">
