--- a/ontoCAT-webpage/WebContent/index.html
+++ b/ontoCAT-webpage/WebContent/index.html
@@ -21,9 +21,9 @@
 	href="rsc/css/main.css"
 />
 <link
-	rel="SHORTCUT ICON"
-	href="rsc/images/favicon.ico"
-/>
+	rel="shortcut icon"
+	href="http://ontocat.sourceforge.net/rsc/images/favicon.ico"
+>
 </head>
 <body>
 <!-- Common header -->
@@ -57,11 +57,8 @@ API Tasks</span></span>
 			href="doc/index.html"
 		>Documentation</a></td>
 	</tr>
-		<tr class="menuCell">
-		<td><a
-			target="_blank"
-			href="examples.html"
-		>Examples</a></td>
+	<tr class="menuCell">
+		<td><a href="examples.html">Examples</a></td>
 	</tr>
 	<tr class="menuCell">
 		<td><a
@@ -79,9 +76,10 @@ API Tasks</span></span>
 <!-- Main content -->
 <div class="mainContent">
 <h1>About</h1>
-<p><strong>Onto CAT</strong> or <strong>Ontology Common API Tasks</strong> is a
-java library aiming to simplify the hurdle of querying many existing ontology
-resources. In its most current version it supports not only both the main ontology browsers: <a
+<p><strong>Onto CAT</strong> or <strong>Ontology Common API
+Tasks</strong> is a java library aiming to simplify the hurdle of querying many
+existing ontology resources. In its most current version it supports not
+only both the main ontology browsers: <a
 	href="http://bioportal.bioontology.org"
 	target="_blank"
 >NCBO BioPortal</a> and <a
@@ -91,11 +89,16 @@ resources. In its most current version it supports not only both the main ontolo
 around their original Web Services, but also supports querying local OWL
 and OBO resources employing the <a
 	href="http://owlapi.sourceforge.net/2.x.x/index.html"
-> OWL API</a>. <strong>Onto CAT</strong> provides the same standardised, uniform interface for all of them.</p>
-<p><strong>Onto CAT</strong> is open source and is available under the <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html"
-target="_blank">GPLv3 license</a>.</p>
-<p>Releases are often and comprehensively tested, so the end user does not have to worry about the updates in 
-access to underlying resources.</p>
+> OWL API</a>. <strong>Onto CAT</strong> provides the same standardised,
+uniform interface for all of them.</p>
+<p><strong>Onto CAT</strong> is open source and is available under
+the <a
+	href="http://www.gnu.org/licenses/gpl-3.0-standalone.html"
+	target="_blank"
+>GPLv3 license</a>.</p>
+<p>Releases are often and comprehensively tested, so the end user
+does not have to worry about the updates in access to underlying
+resources.</p>
 <h1>News</h1>
 <p>We have new web page.</p>
 </div>
