minor changes to contacts, and made the heading smaller
git-svn-id: http://www.ontocat.org/svn/trunk@73 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT-webpage/WebContent/contact.html
+++ b/ontoCAT-webpage/WebContent/contact.html
@@ -95,10 +95,10 @@ but feel free to subscribe.</p>
 	href="https://sourceforge.net/tracker/?group_id=281068&atid=1192566"
 	target="_blank"
 >one</a> as well.</p>
-<h1>Developers</h1>
-<p>Tomasz Adamusiak <a href="mailto:tomasz@ebi.ac.uk">tomasz@ebi.ac.uk</a></p>
-<p>Morris Swertz <a href="mailto:m.a.swertz@rug.nl">m.a.swertz@rug.nl</a></p>
-<p>Helen Parkinson <a href="mailto:parkinson@ebi.ac.uk">parkinson@ebi.ac.uk</a></p>
+<h1>Contacts</h1>
+<p>Tomasz Adamusiak <a href="mailto:tomasz@ebi.ac.uk">&lt;tomasz@ebi.ac.uk&gt;</a> [Developer]</p>
+<p>Morris Swertz <a href="mailto:m.a.swertz@rug.nl">&lt;m.a.swertz@rug.nl&gt;</a> [Developer]</p>
+<p>Helen Parkinson <a href="mailto:parkinson@ebi.ac.uk">&lt;parkinson@ebi.ac.uk&gt;</a></p>
 <p><br></br>Onto CAT logo courtesy of Eamonn Maguire</p>
 </div>
 <!-- SourceForge logo -->
