changed bmps to pngs
git-svn-id: http://www.ontocat.org/svn/trunk@82 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT-webpage/WebContent/docs.html
+++ b/ontoCAT-webpage/WebContent/docs.html
@@ -96,19 +96,19 @@ Onto CAT.</p>
 	Although any other IDE supporting Java will do, the following steps are
 	based on Eclipse. <img
 		class="docsImage"
-		src="rsc\images\docs_step1.bmp"
+		src="rsc\images\docs_step1.png"
 		alt="Download Eclipse"
 	/></li>
 	<li>Start a new Java project: <img
 		class="docsImage"
-		src="rsc\images\docs_step2.bmp"
+		src="rsc\images\docs_step2.png"
 		alt="Start a new Java project"
 	/></li>
 	<li>In your new project, lets call it <strong>Using
 	OntoCAT</strong>, add a <strong>Lib</strong> folder to store external libraries:
 	<img
 		class="docsImage"
-		src="rsc\images\docs_step3.bmp"
+		src="rsc\images\docs_step3.png"
 		alt="Add a lib folder"
 	/></li>
 	<li><a name="skipthebasics"></a>Add all the required libraries to
@@ -120,7 +120,7 @@ Onto CAT.</p>
 	Don't forget to add the <a href="downloads.html">latest version</a> of
 	Onto CAT in there as well. <img
 		class="docsImage"
-		src="rsc\images\docs_step4.bmp"
+		src="rsc\images\docs_step4.png"
 		alt="Requied libraries"
 	/></li>
 	<li>
@@ -132,7 +132,7 @@ Onto CAT.</p>
 		<li>Navigate to your project's lib folder and select all the
 		newly copied libraries and click <strong>OK</strong>. <img
 			class="docsImage"
-			src="rsc\images\docs_step5.bmp"
+			src="rsc\images\docs_step5.png"
 			alt="Add jars to class path"
 		/></li>
 		<li>If all went well, you should see all the added jars under a
@@ -143,7 +143,7 @@ Onto CAT.</p>
 	<li>Add a new class to your project and call it <strong>Example</strong>:
 	<img
 		class="docsImage"
-		src="rsc\images\docs_step6.bmp"
+		src="rsc\images\docs_step6.png"
 		alt="Add new class"
 	/></li>
 	<li>Copy the following example code or use any of the other
