corrected some wording
git-svn-id: http://www.ontocat.org/svn/trunk@83 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT-webpage/WebContent/downloads.html
+++ b/ontoCAT-webpage/WebContent/downloads.html
@@ -81,9 +81,11 @@ API Tasks</span></span>
 	target="_blank"
 >Release notes</a>)</p>
 <h2>Installation</h2>
-<p>All required libraries are available from <a
+<p>An up-to-date list of required external libraries is available
+from <a
 	href="https://ontocat.svn.sourceforge.net/svnroot/ontocat/trunk/ontoCAT/lib/"
->here</a>. Alternatively you can check out a dev version from SVN:</p>
+>here</a>.<br></br>
+Alternatively you can check out a dev version from SVN:</p>
 <pre>svn co
 https://ontocat.svn.sourceforge.net/svnroot/ontocat/trunk/ontoCAT</pre>
 <h1>Older versions</h1>
