Added examples. Made logo image link relative to root. Renamed <Onto CAT> to <OntoCAT> consistently.
git-svn-id: http://www.ontocat.org/svn/trunk@135 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT-webpage/WebContent/contact.html
+++ b/ontoCAT-webpage/WebContent/contact.html
@@ -38,7 +38,7 @@ API Tasks</span></span>
 >
 	<tr class="logo">
 		<td><a href="index.html"><img
-			src="rsc/images/ontocat.png"
+			src="/rsc/images/ontocat.png"
 			height="154px"
 		></img></a></td>
 	</tr>
@@ -74,7 +74,7 @@ API Tasks</span></span>
 <div class="mainContent">
 <h1>Mailing lists</h1>
 <h2>[ontoCAT-users]</h2>
-<p>A general list for users of Onto CAT. Ask all your questions
+<p>A general list for users of OntoCAT. Ask all your questions
 here.</p>
 <p><a
 	href="https://lists.sourceforge.net/lists/listinfo/ontocat-users"
@@ -97,7 +97,7 @@ but feel free to subscribe.</p>
 <p>Morris Swertz <a href="mailto:m.a.swertz@rug.nl">&lt;m.a.swertz@rug.nl&gt;</a></p>
 <p>Helen Parkinson <a href="mailto:parkinson@ebi.ac.uk">&lt;parkinson@ebi.ac.uk&gt;</a></p>
 <p><br></br>
-Onto CAT logo courtesy of Eamonn Maguire</p>
+OntoCAT logo courtesy of Eamonn Maguire</p>
 </div>
 <!-- SourceForge logo -->
 <div class="footer">
