--- a/ontoCAT-webpage/WebContent/downloads.html
+++ b/ontoCAT-webpage/WebContent/downloads.html
@@ -38,7 +38,7 @@ API Tasks</span></span>
 >
 	<tr class="logo">
 		<td><a href="index.html"><img
-			src="rsc/images/ontocat.png"
+			src="/rsc/images/ontocat.png"
 			height="154px"
 		></img></a></td>
 	</tr>
