--- a/ontoCAT-webpage/WebContent/examples.html
+++ b/ontoCAT-webpage/WebContent/examples.html
@@ -38,7 +38,7 @@ API Tasks</span></span>
 >
 	<tr class="logo">
 		<td><a href="index.html"><img
-			src="rsc/images/ontocat.png"
+			src="/rsc/images/ontocat.png"
 			height="154px"
 		></img></a></td>
 	</tr>
@@ -77,15 +77,38 @@ API Tasks</span></span>
 	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example1.java?view=markup"
 	target="_blank"
 >Example 1</a> - Shows how to list all ontologies available through OLS</h2>
+
 <h2><a
 	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example2.java?view=markup"
 	target="_blank"
->Example 2</a> - Shows how to list all ontologies available through NCBO
-BioPortal</h2>
+>Example 2</a> - Shows how to list all ontologies available through NCBO BioPortal</h2>
+
 <h2><a
 	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example3.java?view=markup"
 	target="_blank"
 >Example 3</a> - Shows how to search an OWL ontology</h2>
+
+<h2><a
+	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example4.java?view=markup"
+	target="_blank"
+>Example 4</a> - Shows how to sort and rank searches</h2>
+
+<h2><a
+	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example5.java?view=markup"
+	target="_blank"
+>Example 5</a> - Shows how to cache an ontology service</h2>
+
+<h2><a
+	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example6.java?view=markup"
+	target="_blank"
+>Example 6</a> - Shows how to combine multiple ontologies</h2>
+
+<h2><a
+	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example7.java?view=markup"
+	target="_blank"
+>Example 7</a> - Shows how to translate ontology to a different namespace</h2>
+
+<p><br></br></p>
 <p>Not found an example you're interested in? Feel free to request
 it via the <a
 	href="https://sourceforge.net/tracker/?group_id=281068&atid=1192566"
