--- a/ontoCAT-webpage/WebContent/index.html
+++ b/ontoCAT-webpage/WebContent/index.html
@@ -39,7 +39,7 @@ API Tasks</span></span>
 >
 	<tr class="logo">
 		<td><a href="index.html"><img
-			src="rsc/images/ontocat.png"
+			src="/rsc/images/ontocat.png"
 			height="154px"
 		></img></a></td>
 	</tr>
@@ -74,7 +74,7 @@ API Tasks</span></span>
 <!-- Main content -->
 <div class="mainContent">
 <h1>About</h1>
-<p><strong>Onto CAT</strong> or <strong>Ontology Common API
+<p><strong>OntoCAT</strong> or <strong>Ontology Common API
 Tasks</strong> is a java library aiming to overcome the hurdle of querying
 multiple existing ontology resources. It supports both major ontology
 browsers: <a
@@ -87,9 +87,9 @@ browsers: <a
 around their Web Services. It also supports querying of local OWL and
 OBO resources making use of <a
 	href="http://owlapi.sourceforge.net/2.x.x/index.html"
->OWL API</a>. <strong>Onto CAT</strong> provides the same standardised,
+>OWL API</a>. <strong>OntoCAT</strong> provides the same standardised,
 uniform interface for all of them.</p>
-<p><strong>Onto CAT</strong> is open source and is available under
+<p><strong>OntoCAT</strong> is open source and is available under
 the <a
 	href="http://www.gnu.org/licenses/gpl-3.0-standalone.html"
 	target="_blank"
