--- a/ontoCAT-restservice/WebContent/test_beforeMultipleTermsVersion.html
+++ b/ontoCAT-restservice/WebContent/test_beforeMultipleTermsVersion.html
@@ -1,13 +1,11 @@
 <html>
 <head>
 <script language="JavaScript" type="text/javascript" src="jquery-1.4.2.js"></script>
-<script language="JavaScript" type="text/javascript" src='jquery.autocomplete.js'></script>
-<script language="JavaScript" type="text/javascript" src='localdata.js'></script>
+<script language="Javascript" type="text/javascript" scr="jquery.jsonp-1.1.3.min.js"></script> 
+<script language="JavaScript" type="text/javascript" src="jquery.tokeninput.js"></script>
+<script language="JavaScript" type="text/javascript" src="SemOntoCat.js"></script>
 
-<script language="JavaScript" type="text/javascript" src="JSemOntoCat.js"></script>
-
-<link rel="stylesheet" type="text/css" href="jquery.autocomplete.css" />
-<link rel="stylesheet" href="JSemOntoCatCSS.css" type="text/css"/>
+<link rel="stylesheet" href="SemOntoCatCSS.css" type="text/css"/>
 
 </head>
 <body>
@@ -29,15 +27,21 @@ $.getJSON("http://localhost:8080/ontocat/rest/json/searchAll/brca",
 
 	    	<input type="text" class="value" id="tokenize" name="Input1" autocomplete="off" value="aa"/> <br/><br/>
 			<input value="Search" type="button" id="submit_term"  name="submit_term"/>
-	    <p>
-			<label>Single term (contains):</label>
-			<input type="text" id="suggest14" />
-			<input type="button" value="Get Value" />
-		</p>
+	    
 	  
 		</div> 
 	</div>
-	
+	<br/><br/><br/><br/>
+	 <div id="misc">
+		<div id="help">
+		    <h2> Help </h2>
+		    <div id="help_text" >	 Enter a term and pick a suggestion from the list. </div>  
+            </div> 
+	    <div id="help1"> <h2> Help </h2> 
+		    <div id="help1_text" > Enter a term and pick a suggestion from the list.Press the "search" button when the correct term have been inserted.
+	            </div>
+	    </div>
+     </div>	
 
 	  <div id="footer">
        <div id="json_results">   </div> 
