--- a/ontoCAT-restservice/WebContent/version0.3/test_beforeMultipleTermsVersion.html
+++ b/ontoCAT-restservice/WebContent/version0.3/test_beforeMultipleTermsVersion.html
@@ -1,28 +1,11 @@
 <html>
 <head>
 <script language="JavaScript" type="text/javascript" src="jquery-1.4.2.js"></script>
-<!-- script language="Javascript" type="text/javascript" scr="jquery.jsonp-1.1.3.min.js"></script> --> 
+<script language="Javascript" type="text/javascript" scr="jquery.jsonp-1.1.3.min.js"></script> 
 <script language="JavaScript" type="text/javascript" src="jquery.tokeninput.js"></script>
-
 <script language="JavaScript" type="text/javascript" src="SemOntoCat.js"></script>
 
 <link rel="stylesheet" href="SemOntoCatCSS.css" type="text/css"/>
-
-    <link rel="stylesheet" href="lavalamp_test.css" type="text/css" media="screen">
-    <script type="text/javascript" src="jquery.easing.min.js"></script>
-    <script type="text/javascript" src="jquery.lavalamp.min.js"></script>
-    <script type="text/javascript">
-        $(function() {
-            j$("#1, #2, #3").lavaLamp({
-                fx: "backout",
-                speed: 700,
-                click: function(event, menuItem) {
-                    return false;
-                }
-            });
-        });
-    </script>
-
 
 </head>
 <body>
@@ -36,15 +19,7 @@ $.getJSON("http://localhost:8080/ontocat/rest/json/searchAll/brca",
 
 
 
-<div id="header">
-    <ul class="MenuJQuery" id="2">
-    <li class="current"><a href="#">Home</a></li>
-    <li><a href="#">Upload a File</a></li>
-    <li><a href="#">Enter your notes</a></li>
-    <li><a href="#">T.M.</a></li>
-</ul>
-<br><br><br>
-</div>
+<div id="header"></div>
   
 	<div id="main">
     	<div id="search_box">
