git-svn-id: http://www.ontocat.org/svn/trunk@139 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT-restservice/WebContent/test.html
+++ b/ontoCAT-restservice/WebContent/test.html
@@ -39,7 +39,7 @@ $.getJSON("http://localhost:8080/ontocat/rest/json/searchAll/brca",
 <div id="header">
     <ul class="MenuJQuery" id="2">
     <li class="current"><a href="#">Home</a></li>
-    <li><a href="#">Upload a File</a></li>
+    <li><a href="upload_file.html">Upload a File</a></li>
     <li><a href="#">Enter your notes</a></li>
     <li><a href="#">T.M.</a></li>
 </ul>
