--- a/ontoCAT-restservice/WebContent/test.html
+++ b/ontoCAT-restservice/WebContent/test.html
@@ -40,8 +40,8 @@ $.getJSON("http://localhost:8080/ontocat/rest/json/searchAll/brca",
     <ul class="MenuJQuery" id="2">
     <li class="current"><a href="#">Home</a></li>
     <li><a href="upload_file.html">Upload a File</a></li>
-    <li><a href="#">Enter your notes</a></li>
-    <li><a href="#">T.M.</a></li>
+    <li><a href="Jquery_RTE_light_editor/index.html">Enter your notes</a></li>
+    <li><a href="TEST_TM/index.html">T.M.</a></li>
 </ul>
 <br><br><br>
 </div>
