git-svn-id: http://www.ontocat.org/svn/trunk@143 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT-restservice/WebContent/test.html
+++ b/ontoCAT-restservice/WebContent/test.html
@@ -34,7 +34,13 @@ $.getJSON("http://localhost:8080/ontocat/rest/json/searchAll/brca",
 
 </script>
 
-
+   <a href="#">Home</a>
+   <a href="upload_file.html">Upload a File</a>
+   <a href="Jquery_RTE_light_editor/index.html">Enter your notes</a>
+   <a href="TEST_TM/index.html">T.M.</a>
+   <a href="SearchWithJTip/index.htm">Search with JTip.</a>
+   <a href="SPARQL/index.htm">Sparql.</a>
+   
 
 <div id="header">
     <ul class="MenuJQuery" id="2">
@@ -43,8 +49,12 @@ $.getJSON("http://localhost:8080/ontocat/rest/json/searchAll/brca",
     <li><a href="Jquery_RTE_light_editor/index.html">Enter your notes</a></li>
     <li><a href="TEST_TM/index.html">T.M.</a></li>
 </ul>
+
+
 <br><br><br>
 </div>
+  
+  
   
 	<div id="main">
     	<div id="search_box">
