--- a/ontoCAT-restservice/WebContent/version0.4/test.html
+++ b/ontoCAT-restservice/WebContent/version0.4/test.html
@@ -1,135 +1,43 @@
 <html>
 <head>
-<script type="text/javascript" src="http://ws.geonames.org/export/geonamesData.js"></script>
-<script type="text/javascript" src="/export/jsr_class.js"></script>
+<link rel="stylesheet" href="semOntoCat.css" type="text/css"/>
 
 
-<link rel="stylesheet" href="SemOntoCatCSS.css" type="text/css"/>
-
-<style>
-  #suggestBoxElement {border: 1px solid #8FABFF; visibility:hidden; text-align: left;  white-space: nowrap; background-color: #eeeeee;}
-  .suggestions { font-size: 14;background-color: #eeeeee;  }
-  .suggestionMouseOver { font-size: 14;background: #3333ff; color: white;  }
-</style>
 
 
-<script type="text/javascript" >
-// postalcodes is filled by the JSON callback and used by the mouse event handlers of the suggest box
-var postalcodes;
-
-// this function will be called by our JSON callback
-// the parameter jData will contain an array with postalcode objects
-function getLocation(jData) {
-  if (jData == null) {
-    // There was a problem parsing search results
-    return;
-  }
-
-  // save place array in 'postalcodes' to make it accessible from mouse event handlers
-  postalcodes = jData.postalcodes;
-    	
-  if (postalcodes.length > 1) {
-    // we got several places for the postalcode
-    // make suggest box visible
-    document.getElementById('suggestBoxElement').style.visibility = 'visible';
-    var suggestBoxHTML  = '';
-    // iterate over places and build suggest box content
-    for (i=0;i< jData.postalcodes.length;i++) {
-      // for every postalcode record we create a html div 
-      // each div gets an id using the array index for later retrieval 
-      // define mouse event handlers to highlight places on mouseover
-      // and to select a place on click
-      // all events receive the postalcode array index as input parameter
-      suggestBoxHTML += "<div class='suggestions' id=pcId" + i + " onmousedown='suggestBoxMouseDown(" + i +")' onmouseover='suggestBoxMouseOver(" +  i +")' onmouseout='suggestBoxMouseOut(" + i +")'> " + postalcodes[i].countryCode + ' ' + postalcodes[i].postalcode + '    ' + postalcodes[i].placeName  +'</div>';
-    }
-    // display suggest box
-    document.getElementById('suggestBoxElement').innerHTML = suggestBoxHTML;
-  } else {
-    if (postalcodes.length == 1) {
-      // exactly one place for postalcode
-      // directly fill the form, no suggest box required 
-      var placeInput = document.getElementById("placeInput");
-      placeInput.value = postalcodes[0].placeName;
-    }
-    closeSuggestBox();
-  }
-}
-
-
-function closeSuggestBox() {
-  document.getElementById('suggestBoxElement').innerHTML = '';
-  document.getElementById('suggestBoxElement').style.visibility = 'hidden';
-}
-
-
-// remove highlight on mouse out event
-function suggestBoxMouseOut(obj) {
-  document.getElementById('pcId'+ obj).className = 'suggestions';
-}
-
-// the user has selected a place name from the suggest box
-function suggestBoxMouseDown(obj) {
-  closeSuggestBox();
-  var placeInput = document.getElementById("placeInput");
-  placeInput.value = postalcodes[obj].placeName;
-}
-
-// function to highlight places on mouse over event
-function suggestBoxMouseOver(obj) {
-  document.getElementById('pcId'+ obj).className = 'suggestionMouseOver';
-}
-
-
-// this function is called when the user leaves the postal code input field
-// it call the geonames.org JSON webservice to fetch an array of places 
-// for the given postal code 
-function postalCodeLookup() {
-
-  var country = document.getElementById("countrySelect").value;
-
-  if (geonamesPostalCodeCountries.toString().search(country) == -1) {
-     return; // selected country not supported by geonames
-  }
-  // display 'loading' in suggest box
-  document.getElementById('suggestBoxElement').style.visibility = 'visible';
-  document.getElementById('suggestBoxElement').innerHTML = '<small><i>loading ...</i></small>';
-
-  var postalcode = document.getElementById("postalcodeInput").value;
-
-  request = 'http://www.geonames.org/postalCodeLookupJSON?postalcode=' + postalcode  + '&country=' + country  + '&callback=getLocation';
-
-  // Create a new script object
-  aObj = new JSONscriptRequest(request);
-  // Build the script tag
-  aObj.buildScriptTag();
-  // Execute (add) the script tag
-  aObj.addScriptTag();
-}
-
-// set the country of the user's ip (included in geonamesData.js) as selected country 
-// in the country select box of the address form
-function setDefaultCountry() {
-  var countrySelect = document.getElementById("countrySelect");
-  for (i=0;i< countrySelect.length;i++) {
-    // the javascript geonamesData.js contains the countrycode
-    // of the userIp in the variable 'geonamesUserIpCountryCode'
-    if (countrySelect[i].value == geonamesUserIpCountryCode) {
-      // set the country selectionfield
-      countrySelect.selectedIndex = i;
-    }
-  }
-}
-
-
-</script>
 </head>
-<body onload="setDefaultCountry();">
-
+<body>
 <script>
-$.getJSON("http://localhost:8080/ontocat/rest/json/searchAll/brca", 
-        function(data){      
-        	  //alert("JSON Data: " + data.term[0].accession ); 
-        });
+document.addEvent('domready', function() {
+	 
+	var inputWord = $('demo-word');
+ 
+	// Our instance for the element with id "demo-word"
+	new Autocompleter.Request.JSON(inputWord, 'http://localhost:8080/ontocat/rest/json/searchAll/brca', {
+		'indicatorClass': 'autocompleter-loading'
+	});
+ 
+ 
+	var inputWord2 = $('demo-words');
+ 
+	// An element as indicator, shown during background request
+	var indicator = inputWord2.getPrevious().getElement('.autocompleter-loading');
+	indicator.setStyle('display', 'none');
+ 
+	new Autocompleter.Request.JSON(inputWord2, 'http://localhost:8080/ontocat/rest/json/searchAll/brca', {
+		'indicator': indicator,
+		'multiple': true,
+		'selectFirst': true,
+		'selectMode': false,
+		'minLength': 2
+	});
+ 
+});
+
+//$.getJSON("http://localhost:8080/ontocat/rest/json/searchAll/brca", 
+//        function(data){      
+//        	  //alert("JSON Data: " + data.term[0].accession ); 
+//        });
 
 </script>
 
@@ -139,25 +47,40 @@ $.getJSON("http://localhost:8080/ontocat/rest/json/searchAll/brca",
    <a href="TEST_TM/index.html">T.M.</a>
    <a href="SearchWithJTip/index.htm">Search with JTip.</a>
    <a href="SPARQL/index.htm">Sparql.</a>
+   
+
+<div id="header">
+    <ul class="BottomStyle" id="2">
+    <li class="current"><a href="#">Home</a></li>
+    <li><a href="upload_file.html">Upload a File</a></li>
+    <li><a href="Jquery_RTE_light_editor/index.html">Enter your notes</a></li>
+    <li><a href="TEST_TM/index.html">T.M.</a></li>
+</ul>
 
 <br><br><br>
-
+</div>
   
   
   
-	<div id="main">
-    	<div id="search_box">
+<form  method="get" id="form-demo">
+	<fieldset>
+ 
+		<legend>Enter term:</legend>
+		<label>
+			<span>Single word:</span>
+			<input type="text" name="word" class="text" id="demo-word" />
+		</label>
+ 
+		<label>
+			<span>As Tags: <img src="../spinner.gif" class="autocompleter-loading" /></span>
+			<textarea rows="100" cols="100" id="demo-words"></textarea>
+ 
+		</label>
+ 
+	</fieldset>
+ 
+</form>
 
-<input id="postalcodeInput" name="postalcode" onblur="postalCodeLookup();" size="10" type="text">
-
-<span style="position: relative; z-index: 24;">
-  <input id="placeInput"  name="place" size="30" onblur="closeSuggestBox();" type="text">
-  <span style="position: absolute; top: 20px; left: 0px; z-index:25;visibility: hidden;" id="suggestBoxElement"></span>
-</span>	    
-	  
-		</div> 
-	</div>
-	<br/><br/><br/><br/>
 
 	  <div id="footer">
        <div id="json_results">   </div> 
