--- a/ontoCAT-restservice/WebContent/version0.6/Copy of test.html
+++ b/ontoCAT-restservice/WebContent/version0.6/Copy of test.html
@@ -1,11 +1,10 @@
 <html>
 <head>
-
-<script language="JavaScript" type="text/javascript" src="sparql.js"></script>
-<script language="JavaScript" type="text/javascript" src="SemOntoCat.js"></script>
 <script type="text/javascript" src="jsr_class.js"></script> 
 
+<script language="JavaScript" type="text/javascript" src="SemOntoCat.js"></script>
 <script language="javascript" type="text/javascript" src="autocomplete.js"></script>
+
 <link rel="stylesheet" href="SemOntoCatCSS.css" type="text/css"/>
 
 <style>
@@ -14,18 +13,29 @@
   .suggestionMouseOver { font-size: 14;background: #3333ff; color: white;  }
 </style>
 
+
+
+
 </head>
 
 
 <body>
+
+
+
 <br><br><br>
  
-  <input type="text" name="term" id=term"/>
-  <div id="suggestionBox"></div>
-  
-  
-  <input id="termLabelInput" name="TermLabel" onblur="TermLabelLookup();" size="10" type="text" value="first">
-  <input type="text" size="40" autoComplete="mygroup4" />    	
+ <input type="text" size="40" autoComplete="mygroup1" /> 
+<script language="javascript" type="text/javascript"> 
+    autoComplete.Set("mygroup1", new Array("two", "three", "twenty", "tweak", "tool", 
+    "two hundred", "testing", "two-thirds", "terran", "tomato", "tower", "twin", "task", 
+    "toolbar", "test")); 
+</script>
+ 
+ <br><br><br>
+ 
+   	<input id="termLabelInput" name="TermLabel" onblur="TermLabelLookup();" size="10" type="text">
+ <input type="text" size="40" autoComplete="mygroup4" />    	
    	<span style="position: relative; z-index: 24;">
 
 	 <input id="termLabelSuggest"  name="place" size="90" onfocus="displayJsonTerms();" type="text">
@@ -34,10 +44,15 @@
    
    <input type="hidden" value="0" id="theValue" />
    <div id="myDiv"> </div>
-   
-  <br/><br/>
-  <input id="sparqlBegin"  name="sparqlBegin" onClick="RunSparql()" type=Button value="attempt sparql">
-       <input type=BUTTON value="Submit" name="mySubmit" onClick="setText()">
+   	
+  <br><br> 
+  	<input id="postalcodeInput" name="postalcode" onblur="postalCodeLookup();" size="10" type="text">
+ 
+ 
+    <span style="position: relative; z-index: 24;">
+	 <input id="placeInput"  name="place" size="30" onblur="closeSuggestBox();" type="text">
+  	<span style="position: absolute; top: 20px; left: 0px; z-index:25;visibility: hidden;" id="suggestBoxElement"></span>
+   </span>
 
 	<br/><br/><br/><br/>
 	 
