--- a/ontoCAT-webpage/WebContent/index.html
+++ b/ontoCAT-webpage/WebContent/index.html
@@ -91,20 +91,20 @@ OBO resources making use of <a
 uniform interface for all of them.</p>
 <p><strong>OntoCAT</strong> is open source and is available under
 the <a
-	href="http://www.gnu.org/licenses/gpl-3.0-standalone.html"
+	href="http://www.gnu.org/licenses/lgpl.html"
 	target="_blank"
->GPLv3 license</a>.</p>
+>LGPLv3 license</a>.</p>
 <p>Releases are often and comprehensively tested, so the end user
 does not have to worry about the updates in access to underlying
 resources.</p>
 <h1>News</h1>
-<p>Updated documentation page.</p>
+<p>Version 0.9 released</p>
 </div>
 <!-- SourceForge logo -->
 <div class="footer">
 <div
 	style="position: relative; top: -5px; display: inline; padding-right: 20px;"
->Last modified on 18/02/2010</div>
+>Last modified on 25/03/2010</div>
 <a href="http://sourceforge.net/projects/ontocat"><img
 	src="http://sflogo.sourceforge.net/sflogo.php?group_id=281068&amp;type=10"
 	width="80"
