--- a/ontoCAT-webpage/WebContent/downloads.html
+++ b/ontoCAT-webpage/WebContent/downloads.html
@@ -74,10 +74,10 @@ API Tasks</span></span>
 <div class="mainContent">
 <h1>Latest release</h1>
 <p><a
-	href="https://sourceforge.net/projects/ontocat/files/ontoCAT/version_0.8/ontoCAT_v0.8.jar/download"
+	href="https://sourceforge.net/projects/ontocat/files/ontoCAT/version_0.9/ontoCAT_v0.9.jar/download"
 	target="_blank"
->Version 0.8</a> (<a
-	href="http://master.dl.sourceforge.net/project/ontocat/ontoCAT/version_0.8/release_notes.txt"
+>Version 0.9</a> (<a
+	href="http://master.dl.sourceforge.net/project/ontocat/ontoCAT/version_0.9/release_notes.txt"
 	target="_blank"
 >Release notes</a>)</p>
 <h2>Installation</h2>
@@ -89,13 +89,13 @@ Alternatively you can check out a dev version from SVN:</p>
 <pre>svn co
 https://ontocat.svn.sourceforge.net/svnroot/ontocat/trunk/ontoCAT</pre>
 <h1>Older versions</h1>
-<p></p>
+<p>See <a href="http://sourceforge.net/projects/ontocat/files/">Project Files</a></p>
 </div>
 <!-- SourceForge logo -->
 <div class="footer">
 <div
 	style="position: relative; top: -5px; display: inline; padding-right: 20px;"
->Last modified on 10/02/2010</div>
+>Last modified on 25/03/2010</div>
 <a href="http://sourceforge.net/projects/ontocat"><img
 	src="http://sflogo.sourceforge.net/sflogo.php?group_id=281068&amp;type=10"
 	width="80"
