updated links and text for new release
git-svn-id: http://www.ontocat.org/svn/trunk@172 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT-webpage/WebContent/downloads.html
+++ b/ontoCAT-webpage/WebContent/downloads.html
@@ -74,10 +74,10 @@ API Tasks</span></span>
 <div class="mainContent">
 <h1>Latest release</h1>
 <p><a
-	href="https://sourceforge.net/projects/ontocat/files/ontoCAT/version_0.9/ontoCAT_v0.9.jar/download"
+	href="https://sourceforge.net/projects/ontocat/files/ontoCAT/version_0.9.1/ontoCAT_v0.9.1.jar/download"
 	target="_blank"
->Version 0.9</a> (<a
-	href="http://master.dl.sourceforge.net/project/ontocat/ontoCAT/version_0.9/release_notes.txt"
+>Version 0.9.1</a> (<a
+	href="https://sourceforge.net/projects/ontocat/files/ontoCAT/release_notes.txt/download"
 	target="_blank"
 >Release notes</a>)</p>
 <h2>Installation</h2>
@@ -95,7 +95,7 @@ https://ontocat.svn.sourceforge.net/svnroot/ontocat/trunk/ontoCAT</pre>
 <div class="footer">
 <div
 	style="position: relative; top: -5px; display: inline; padding-right: 20px;"
->Last modified on 25/03/2010</div>
+>Last modified on 8/04/2010</div>
 <a href="http://sourceforge.net/projects/ontocat"><img
 	src="http://sflogo.sourceforge.net/sflogo.php?group_id=281068&amp;type=10"
 	width="80"
