Adding BP acks to page
git-svn-id: http://www.ontocat.org/svn/trunk@226 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT-webpage/WebContent/index.html
+++ b/ontoCAT-webpage/WebContent/index.html
@@ -104,21 +104,17 @@ resources.</p>
 <p>Version 0.9.3 released</p>
 <h1>Related projects</h1>
 <ul>
-<li>
-	<a
+	<li><a
 		href="http://www.ebi.ac.uk/efo"
-		target="_blank">
-		Experimental Factor Ontology
-	</a>
-	</li>
-	<li>
-	<a
+		target="_blank"
+	> Experimental Factor Ontology </a></li>
+	<li><a
 		href="http://zooma.sf.net"
-		target="_blank">
-		Zooma
-	</a>
-	</li>
+		target="_blank"
+	> Zooma </a></li>
 </ul>
+<h1>Acknowledgements</h1>
+<p>Special thanks go to NCBO BioPortal and EBI OLS support teams for all the comprehensive help they provide.</p>
 </div>
 <!-- SourceForge logo -->
 <div class="footer">
