changes for the 0.9.4 release fixed footer added examples and poster link
git-svn-id: http://www.ontocat.org/svn/trunk@234 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT-webpage/WebContent/examples.html
+++ b/ontoCAT-webpage/WebContent/examples.html
@@ -77,32 +77,27 @@ API Tasks</span></span>
 	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example1.java?view=markup"
 	target="_blank"
 >Example 1</a> - Shows how to list all ontologies available through OLS</h2>
-
 <h2><a
 	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example2.java?view=markup"
 	target="_blank"
->Example 2</a> - Shows how to list all ontologies available through NCBO BioPortal</h2>
-
+>Example 2</a> - Shows how to list all ontologies available through NCBO
+BioPortal</h2>
 <h2><a
 	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example3.java?view=markup"
 	target="_blank"
 >Example 3</a> - Shows how to search an OWL ontology</h2>
-
 <h2><a
 	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example4.java?view=markup"
 	target="_blank"
 >Example 4</a> - Shows how to sort and rank searches</h2>
-
 <h2><a
 	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example5.java?view=markup"
 	target="_blank"
 >Example 5</a> - Shows how to cache an ontology service</h2>
-
 <h2><a
 	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example6.java?view=markup"
 	target="_blank"
 >Example 6</a> - Shows how to combine multiple ontologies</h2>
-
 <h2><a
 	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example7.java?view=markup"
 	target="_blank"
@@ -111,7 +106,16 @@ API Tasks</span></span>
 	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example8.java?view=markup"
 	target="_blank"
 >Example 8</a> - Shows how to search a subtree of an ontology</h2>
-<p><br></br></p>
+<h2><a
+	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example9.java?view=markup"
+	target="_blank"
+>Example 9</a> - Shows how to cross reference one ontology with another</h2>
+<h2><a
+	href="http://ontocat.svn.sourceforge.net/viewvc/ontocat/trunk/ontoCAT/src/uk/ac/ebi/ontocat/examples/Example10.java?view=markup"
+	target="_blank"
+>Example 10</a> - Shows how to list all classes from an ontology</h2>
+<p><br></br>
+</p>
 <p>Not found an example you're interested in? Feel free to request
 it via the <a
 	href="https://sourceforge.net/tracker/?group_id=281068&atid=1192566"
@@ -119,9 +123,6 @@ it via the <a
 </div>
 <!-- SourceForge logo -->
 <div class="footer">
-<div
-	style="position: relative; top: -5px; display: inline; padding-right: 20px;"
->Last modified on 10/02/2010</div>
 <a href="http://sourceforge.net/projects/ontocat"><img
 	src="http://sflogo.sourceforge.net/sflogo.php?group_id=281068&amp;type=10"
 	width="80"
