--- a/ontoCAT-webpage/WebContent/index.html
+++ b/ontoCAT-webpage/WebContent/index.html
@@ -101,7 +101,7 @@ the <a
 does not have to worry about the updates in access to underlying
 resources.</p>
 <h1>News</h1>
-<p>Version 0.9.3 released</p>
+<p>Version 0.9.4 released</p>
 <h1>Related projects</h1>
 <ul>
 	<li><a
@@ -113,14 +113,19 @@ resources.</p>
 		target="_blank"
 	> Zooma </a></li>
 </ul>
+<h1>How to cite us</h1>
+<p>Adamusiak Tomasz, Burdett Tony, van der Velde K Joeri,
+Abeygunawardena Niran, Antonakaki Despoina, Parkinson Helen, and
+Swertz Morris. OntoCAT – a simpler way to access ontology resources.
+Available from Nature Precedings &lt;<a
+	href="http://dx.doi.org/10.1038/npre.2010.4666.1"
+>http://dx.doi.org/10.1038/npre.2010.4666.1</a>&gt; (2010)</p>
 <h1>Acknowledgements</h1>
-<p>Special thanks go to NCBO BioPortal and EBI OLS support teams for all the comprehensive help they provide.</p>
+<p>Special thanks go to NCBO BioPortal and EBI OLS support teams for
+all the comprehensive help they provide.</p>
 </div>
 <!-- SourceForge logo -->
 <div class="footer">
-<div
-	style="position: relative; top: -5px; display: inline; padding-right: 20px;"
->Last modified on 9/7/2010</div>
 <a href="http://sourceforge.net/projects/ontocat"><img
 	src="http://sflogo.sourceforge.net/sflogo.php?group_id=281068&amp;type=10"
 	width="80"
