--- a/ontoCAT-webpage/WebContent/docs.html
+++ b/ontoCAT-webpage/WebContent/docs.html
@@ -182,12 +182,10 @@ OntoCAT.</p>
 	select <strong>Run as Java Application</strong></li>
 	<li>All done! You're ready to use OntoCAT.</li>
 </ol>
+<p style="height:100px"></p>
 </div>
 <!-- SourceForge logo -->
 <div class="footer">
-<div
-	style="position: relative; top: -5px; display: inline; padding-right: 20px;"
->Last modified on 17/02/2010</div>
 <a href="http://sourceforge.net/projects/ontocat"><img
 	src="http://sflogo.sourceforge.net/sflogo.php?group_id=281068&amp;type=10"
 	width="80"
