--- a/ontoCAT-restservice/WebContent/version0.6/scriptaculous-js-1.8.3/test/functional/index.html
+++ b/ontoCAT-restservice/WebContent/version0.6/scriptaculous-js-1.8.3/test/functional/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <span style="position: relative; z-index: 24;">
-  <input id="placeInput"  name="place" size="100" onblur="closeSuggestBox();" type="text">
+  <input id="placeInput"  name="place" size="100" onblur="closeSuggestBox();" type="text"/>
   <span style="position: absolute; top: 20px; left: 0px; z-index:25;visibility: hidden;" id="suggestBoxElement"></span>
 </span>
 
@@ -23,7 +23,7 @@ Enter a term.
 
 
 
-<textarea rows=5 cols=40 id="ac4"  onfocus="TermLabelLookup();" autocomplete="off"></textarea>
+<textarea rows="5" cols="40" id="ac4"  onfocus="TermLabelLookup();" autocomplete="off"></textarea>
 <div id="ac4update" style="display:none;border:1px solid black;background-color:white;"></div>
 
 <script type="text/javascript" language="javascript" charset="utf-8">
